# dmo_templated

./: .clang-format  CMakeLists.txt  README.md
cmake/: FindOpenMesh.cmake
src/: CMakeLists.txt
src/DMO/: CMakeLists.txt  DmoMesh.h  DmoParams.h  DmoVector.h  Metrics.h  Set.h  Solver.h  SolverCPU.h  SolverCPU_impl.h  Vertex.h  dmoKernel.cu  gpuErrchk.h  types.h
src/ex01_Basic/: CMakeLists.txt  main.cpp
src/ex01_Basic_cpu/: CMakeLists.txt  main.cpp
src/ex02_UserMetric/: CMakeLists.txt  UserMetrics.h  main.cpp
src/ex02_UserMetric_cpu/: CMakeLists.txt  UserMetrics.h  main.cpp
src/ex03_easy_switch/: CMakeLists.txt  main.cpp  registerDMO.cu  switch_DMO_CPU_GPU.h
src/ex_03_easy_switch/: CMakeLists.txt  main.cpp  switch_DMO_CPU_GPU.h
